[package]
name = "which-rs"
version = "0.1.0"
authors = ["realityone <realityone@me.com>"]

[dependencies]
uucore = { path = "src/coreutils/src/uucore", version = "*", optional = true }

[features]
binaries = ["uucore"]

[[bin]]
name = "which"
path = "src/main.rs"
required-features = ["binaries"]

[lib]
name = "which"
path = "src/lib.rs"
